[tool.poetry]
name = "smtirf"
version = "0.1.5"
description = ""
authors = ["Ray Pauszek <ray.pauszek@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
numpy = "^2.0"
matplotlib = "^3.9"
scipy = "*"
h5py = "^3.4"
numba = "*"
scikit-learn = "*"
scikit-image = "*"
dacite = "^1.8"

[tool.poetry.group.dev.dependencies]
pytest = ">8.0"
pre-commit = "^4.3.0"
black = "^24.0.0"
ruff = "^0.6.0"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]   # E=pycodestyle, F=pyflakes, I=import sorting, B=bugbear
ignore = ["E501"]               # example: ignore long-line errors if using Black

[tool.ruff.lint.isort]
known-first-party = ["smtirf"]
combine-as-imports = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
